@@ -573,6 +573,8 @@ struct ast_sip_endpoint {
 		AST_STRING_FIELD(fromdomain);
 		/*! Context to route incoming MESSAGE requests to */
 		AST_STRING_FIELD(message_context);
+		/*! Accountcode to auto-set on channels */
+		AST_STRING_FIELD(accountcode);
 	);
 	/*! Configuration for extensions */
 	struct ast_sip_endpoint_extensions extensions;
